--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- Needed only if your app targets Android 5.0 (API level 21) or higher. -->
+    <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
@@ -173,7 +175,10 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".lista_pedidos_por_entregar"></activity>
+        <activity android:name=".lista_pedidos_por_entregar" />
+        <activity
+            android:name=".RastrearPedido"
+            android:label="@string/title_activity_rastrear_pedido"></activity>
     </application>
 
 </manifest>
