--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.example.israelgutierrez.prueba"
+        applicationId "com.orders.home.prueba"
         minSdkVersion 23
         targetSdkVersion 26
         versionCode 1
